# AI_POC

./: .gitignore  README.md  l8_object_detection.ipynb
CodeVerifier/: .env  CodeVerifierEngine.ipynb  code_verifier_params.py
CodeVerifier/App/: App.py
CodeVerifier/Engine/: InfoFusionEngine.ipynb
OTEL_log_analyzer/: README.md
OTEL_log_analyzer/GraphAnalyzer/: README.md  graph_chain_executor.py  graph_query_agent.py  main.py  pyproject.toml
OTEL_log_analyzer/GraphGenerator/: README.md  log_parser_cypher_gen.py  main.py  neo4j_client.py  pyproject.toml
OTEL_log_analyzer/data/: logs.json  traces.json
SchoolBeacon/: .gitignore
SchoolBeacon/Engine/: beacon_reader.ipynb
langchain/: langchain tools.ipynb
langchain_MCP_A2A/: README.md  docker-compose.yml  docker-compose_langchain_mcp.yml  envoy-agent-config.yaml  envoy-mcp-config.yaml
langchain_MCP_A2A/a2a_agent/: Dockerfile  WeatherAgent.py  agent_executor.py  main.py  pyproject.toml
langchain_MCP_A2A/a2a_client/: main.py  pyproject.toml
langchain_MCP_A2A/langchain_agent/: Dockerfile  langchain_agent.py  main.py  pyproject.toml
langchain_MCP_A2A/mcp_server/: Dockerfile  pyproject.toml  weather_custom_host_port_server.py  weather_server.py
llamaIndex/: ReActExample.ipynb  SentenceWindowRetrival.ipynb
n8nWorkflows/Beacon-Summary/: Beacon-Summary.json  README.md
